@@ -1,5 +1,8 @@
 2005-04-16  Richard Hult  <richard@imendio.com>
 
+	* libplanner/mrp-old-xml.c (mrp_old_xml_parse): Align the start
+	time to the start of the day, fixes bug #172292.
+
 	* autogen.sh:
 	* data/Makefile.am:
 	* libplanner/Makefile.am:
